Make additional info, filtration and simplex key optional

--- a/src/Hasse_diagram/example/CMakeLists.txt
+++ b/src/Hasse_diagram/example/CMakeLists.txt
@@ -4,20 +4,22 @@ add_executable ( Hasse_diagram_example Hasse_diagram_example.cpp )
 if (TBB_FOUND)
   target_link_libraries(Hasse_diagram_example ${TBB_LIBRARIES})
 endif()
+add_test(NAME Hasse_diagram_example_basic COMMAND $<TARGET_FILE:Hasse_diagram_example>)
 
 add_executable ( Hasse_diagram_from_cubical_complex Hasse_diagram_from_cubical_complex.cpp )
 if (TBB_FOUND)
   target_link_libraries(Hasse_diagram_from_cubical_complex ${TBB_LIBRARIES})
 endif()
+add_test(NAME Hasse_diagram_example_from_cubical_complex COMMAND $<TARGET_FILE:Hasse_diagram_from_cubical_complex>)
 
 add_executable ( Hasse_diagram_from_simplex_tree Hasse_diagram_from_simplex_tree.cpp )
 if (TBB_FOUND)
   target_link_libraries(Hasse_diagram_from_simplex_tree ${TBB_LIBRARIES})
 endif()
+add_test(NAME Hasse_diagram_example_from_simplex_tree COMMAND $<TARGET_FILE:Hasse_diagram_from_simplex_tree>)
 
 add_executable ( Insertion_and_removal_operations_on_Hasse_diagrams Insertion_and_removal_operations_on_Hasse_diagrams.cpp )
 if (TBB_FOUND)
   target_link_libraries(Insertion_and_removal_operations_on_Hasse_diagrams ${TBB_LIBRARIES})
 endif()
-
-install(TARGETS Hasse_diagram_example DESTINATION bin)
+add_test(NAME Hasse_diagram_example_insertions_and_removals COMMAND $<TARGET_FILE:Insertion_and_removal_operations_on_Hasse_diagrams>)
