Add dataset for benchmark and copy it in build dir. Add Hannah random filtrations method. Display column type as a string. Add HEAP column type

--- a/src/Persistence_matrix/benchmark/CMakeLists.txt
+++ b/src/Persistence_matrix/benchmark/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(Persistence_matrix_benchmark)
 
+file(COPY "activities.off" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
+
 add_executable(persistence_matrix_benchmark persistence_matrix_benchmark.cpp)
 if(TARGET TBB::tbb)
   target_link_libraries(persistence_matrix_benchmark TBB::tbb)
