Try nanobind + scikit-build

--- a/src/python/gudhi/CMakeLists.txt
+++ b/src/python/gudhi/CMakeLists.txt
@@ -1,31 +1,46 @@
-nanobind_add_module(_pers_cub_low_dim _pers_cub_low_dim.cc)
-nanobind_add_module(_cubical_complex_ext _cubical_complex.cc)
-nanobind_add_module(_ripser_ext _ripser.cc)
-nanobind_add_module(_rips_complex_ext _rips_complex.cc)
-nanobind_add_module(_edge_collapse_ext _edge_collapse.cc)
-nanobind_add_module(bottleneck bottleneck.cc)
-nanobind_add_module(hera hera.cc)
-nanobind_add_module(_simplex_tree_ext _simplex_tree.cc)
-nanobind_add_module(_reader_utils_ext _reader_utils.cc)
-nanobind_add_module(_witness_complex_ext _witness_complex.cc)
+nanobind_add_module(_pers_cub_low_dim    STABLE_ABI _pers_cub_low_dim.cc)
+nanobind_add_module(_cubical_complex_ext STABLE_ABI _cubical_complex.cc)
+nanobind_add_module(_ripser_ext          STABLE_ABI _ripser.cc)
+nanobind_add_module(_rips_complex_ext    STABLE_ABI _rips_complex.cc)
+nanobind_add_module(_edge_collapse_ext   STABLE_ABI _edge_collapse.cc)
+nanobind_add_module(bottleneck           STABLE_ABI bottleneck.cc)
+nanobind_add_module(hera                 STABLE_ABI hera.cc)
+nanobind_add_module(_simplex_tree_ext    STABLE_ABI _simplex_tree.cc)
+nanobind_add_module(_reader_utils_ext    STABLE_ABI _reader_utils.cc)
+nanobind_add_module(_witness_complex_ext STABLE_ABI _witness_complex.cc)
+
+install(TARGETS _pers_cub_low_dim    LIBRARY DESTINATION _pers_cub_low_dim)
+install(TARGETS _cubical_complex_ext LIBRARY DESTINATION _cubical_complex_ext)
+install(TARGETS _ripser_ext          LIBRARY DESTINATION _ripser_ext)
+install(TARGETS _rips_complex_ext    LIBRARY DESTINATION _rips_complex_ext)
+install(TARGETS _edge_collapse_ext   LIBRARY DESTINATION _edge_collapse_ext)
+install(TARGETS bottleneck           LIBRARY DESTINATION bottleneck)
+install(TARGETS hera                 LIBRARY DESTINATION hera)
+install(TARGETS _simplex_tree_ext    LIBRARY DESTINATION _simplex_tree_ext)
+install(TARGETS _reader_utils_ext    LIBRARY DESTINATION _reader_utils_ext)
+install(TARGETS _witness_complex_ext LIBRARY DESTINATION _witness_complex_ext)
 
 if(TARGET CGAL::CGAL)
     if(TARGET Eigen3::Eigen)
-        nanobind_add_module(_delaunay_complex_ext _delaunay_complex.cc)
+        nanobind_add_module(_delaunay_complex_ext STABLE_ABI _delaunay_complex.cc)
         target_link_libraries(_delaunay_complex_ext PRIVATE Eigen3::Eigen)
         target_link_libraries(_delaunay_complex_ext PRIVATE CGAL::CGAL)
+        install(TARGETS _delaunay_complex_ext LIBRARY DESTINATION _delaunay_complex_ext)
 
-        nanobind_add_module(_tangential_complex_ext _tangential_complex.cc)
+        nanobind_add_module(_tangential_complex_ext STABLE_ABI _tangential_complex.cc)
         target_link_libraries(_tangential_complex_ext PRIVATE CGAL::CGAL)
         target_link_libraries(_tangential_complex_ext PRIVATE Eigen3::Eigen)
+        install(TARGETS _tangential_complex_ext LIBRARY DESTINATION _tangential_complex_ext)
 
-        nanobind_add_module(_euclidean_witness_complex_ext _euclidean_witness_complex.cc)
+        nanobind_add_module(_euclidean_witness_complex_ext STABLE_ABI _euclidean_witness_complex.cc)
         target_link_libraries(_euclidean_witness_complex_ext PRIVATE CGAL::CGAL)
         target_link_libraries(_euclidean_witness_complex_ext PRIVATE Eigen3::Eigen)
+        install(TARGETS _euclidean_witness_complex_ext LIBRARY DESTINATION _euclidean_witness_complex_ext)
 
-        nanobind_add_module(_euclidean_strong_witness_complex_ext _euclidean_strong_witness_complex.cc)
+        nanobind_add_module(_euclidean_strong_witness_complex_ext STABLE_ABI _euclidean_strong_witness_complex.cc)
         target_link_libraries(_euclidean_strong_witness_complex_ext PRIVATE CGAL::CGAL)
         target_link_libraries(_euclidean_strong_witness_complex_ext PRIVATE Eigen3::Eigen)
+        install(TARGETS _euclidean_strong_witness_complex_ext LIBRARY DESTINATION _euclidean_strong_witness_complex_ext)
     endif()
 endif ()
 
